[package]
name = "payeng"
version = "0.1.0"
edition = "2021"
authors = ["quambene <contact.quambene@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
thiserror = "1.0.31"
csv = "1.1.6"
serde = { version = "1.0.137", features = ["derive"] }
